--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 .box{
 	width: 300px;
-	background: lightblue;
+	background-color: lightblue;
 	border: 15px solid blue;
 	padding: 50px;
 	margin: 20px;
